--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
         // 植物信息
         const plantData = {
             '枸杞': { 
-                description: 枸杞（Lycium chinense Miller），又称宁夏枸杞、中华枸杞等。茄科枸杞属多年生木本植物，枝条细弱，弓状弯曲或俯垂，淡灰色；叶片呈卵形；花长在长枝上单生或双生于叶腋；果实为卵状浆果红色；花期为6～7月；果期为8～10月。李时珍说：“枸杞为两种树的合名，如枸棘，茎如杞柳之条，故兼名之曰枸杞。”
-枸杞起源于中国，原产于中国西北地区，尤以宁夏、甘肃、青海等地为主要产区，后来逐渐传播到全国各地及世界其他地区。多分布于温带和亚热带地区，中国北方多数省区都有栽培，常生于山坡、路旁或村边。枸杞喜光，喜冷凉气候，耐寒；抗旱能力较强，在干旱荒漠地仍能生长，耐盐碱，多生长在碱性土和沙质壤土上，最适合在土层深厚、肥沃的壤土上栽培。枸杞一般通过种子或者扦插繁殖。
-                '
+                description: '枸杞（Lycium chinense Miller），又称宁夏枸杞、中华枸杞等。茄科枸杞属多年生木本植物，枝条细弱，弓状弯曲或俯垂，淡灰色；叶片呈卵形；花长在长枝上单生或双生于叶腋；果实为卵状浆果红色；花期为6～7月；果期为8～10月。李时珍说：“枸杞为两种树的合名，如枸棘，茎如杞柳之条，故兼名之曰枸杞。”'
             },
             '菊花': { 
                 description: '菊花（Lycium chinense Mille）是菊科菊属多年生草本植物 、日本国花 。由某些野生菊经种间杂交演化而来的；茎多分枝，基部木质化；单叶互生，多卵圆形，边缘具粗大锯齿或深裂；头状花序，外围为舌状花，大小、形状变化很大，有平瓣、匙瓣等多种；中心为筒状花，常稀少或阙如；不同的瓣形，形成不同的花型、颜色、品种。花序下为总苞，舌状花多为雄性花，筒状花为两性花，雌蕊柱头两歧 。菊花原产于中国，唐宋时代，菊花经朝鲜传到日本，十七世纪传到欧洲，然后再传到美洲。菊花可按照花径、花期、花色等区别分类，历史上的菊花品种分类是以色为主的，清朝《广群芳谱》所记载的菊花品种就有300~400个，目前品种有数千个，并且每年都在不断增加。' 
